force-app/main/default/objects/Negative_Information_DE_Director_Event__c/Negative_Information_DE_Director_Event__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyNegativeInformationDEDirectorEventV2</description>
    <label>Negative Information DE Director Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>DE Director Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negative Information DE Director Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>