force-app/main/default/objects/Negative_Information_DE_Director_Event__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>The code that corresponds to the event description.</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>