force-app/main/default/objects/Negative_Information_DE_Director_Event__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Negative Information DE Director Event</relationshipLabel>
    <relationshipName>Negative_Information_DE_Director_Event</relationshipName>
    <type>Lookup</type>
</CustomField>