force-app/main/default/objects/Negative_Information_DE_Director_Event__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date the negativeEvent occurred/is registered.</description>
    <label>Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>