force-app/main/default/objects/Negative_Information_DE_Director_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>A look up stating the type.  ‘P’ = Person.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>